# ImageEmbeddingCoupling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: CMakeCheckSetAVX.cmake
docs/: idMapHeuristic.tex  main.tex  selectionMapping.tex
plugins/hsne-analysis/: CMakeLists.txt
plugins/hsne-analysis/src/: AdvancedHsneSettingsAction.cpp  AdvancedHsneSettingsAction.h  CommonTypes.h  DimensionSelectionAction.cpp  GeneralHsneSettingsAction.cpp  GeneralHsneSettingsAction.h  GeneralTsneSettingsAction.cpp  GeneralTsneSettingsAction.h  HsneHierarchy.cpp  HsneHierarchy.h  HsneParameters.h  HsneScaleAction.cpp  HsneScaleAction.h  HsneScaleUpdate.cpp  HsneScaleUpdate.h  HsneSettingsAction.cpp  HsneSettingsAction.h  InteractiveHsnePlugin.cpp  InteractiveHsnePlugin.h  InteractiveHsnePlugin.json  Logger.cpp  Logger.h  MeanShiftAction.cpp  MeanShiftAction.h  OffscreenBuffer.cpp  OffscreenBuffer.h  PCA.h  RecolorAction.cpp  RecolorAction.h  RegularHsneAction.cpp  RegularHsneAction.h  TsneAnalysis.cpp  TsneAnalysis.h  TsneComputationAction.cpp  TsneComputationAction.h  TsneData.h  TsneParameters.h  TsneSettingsAction.cpp  TsneSettingsAction.h  Utils.cpp  (+7 more)
tests/: CMakeLists.txt  tests_utils.cpp
